<resources>
    <string name="app_name">NetworkLR</string>
    <string name="send_mail">Send mail</string>
    <string name="save_network">Save network</string>
    <string name="upload_plan">Upload plan</string>
    <string name="upload_network">Upload network</string>
    <string name="init_network">Init Network</string>
    <string name="add_object">Add Object</string>
    <string name="add_connection">Add Connection</string>
    <string name="edit_objects_connections">Edit Objects/Connections</string>
    <string name="edit_name">Edit Name</string>
    <string name="color">Color</string>
    <string name="red">Red</string>
    <string name="green">Green</string>
    <string name="blue">Blue</string>
    <string name="orange">Orange</string>
    <string name="black">Black</string>
    <string name="cyan">Cyan</string>
    <string name="magenta">Magenta</string>
    <string name="edit_thickness">Edit Thickness</string>
    <string name="change_image">Change image</string>
    <string name="bath">Bath</string>
    <string name="bed">Bed</string>
    <string name="television">Television</string>
    <string name="couch">Couch</string>
    <string name="nightstand">nightstand</string>
    <string name="desktop">Desktop</string>
    <string name="table">Table</string>
    <string name="dinner_table">Dinner table</string>
    <string name="basin">Basin</string>
    <string name="delete">Delete</string>
    <string name="move_objects">Move Objects</string>
    <string name="net_save">Network saved !</string>
    <string name="move">Move object mode enable</string>
    <string name="move_dis">Move object  mode disabled</string>
    <string name="con_del">Connection deleted !</string>
    <string name="obj_del">Object deleted !</string>
    <string name="reset">Reset Done</string>
    <string name="edit">Edit object/connection mode enable</string>
    <string name="edit_dis">Edit object/connection mode disabled</string>
    <string name="add_obj">Add object mode enable</string>
    <string name="add_obj_dis">Add object mode disabled</string>
    <string name="add_con">Add connection mode enable</string>
    <string name="add_con_dis">Add connection mode disabled</string>
    <string name="upload">\"Upload plan \"</string>
    <string name="name">Name</string>
    <string name="put_text">Put the graph name</string>
    <string name="cancel">Cancel</string>
    <string name="name_graph">Put graph name</string>
    <string name="put_con">Put name of connection</string>
</resources>